--- a/src/app/notification-search/notification-search.component.css
+++ b/src/app/notification-search/notification-search.component.css
@@ -1,6 +1,4 @@
-.notificatoin-search-wrapper{
-    padding: 20px;
-}
+
 .mt-3{
     margin-top: 3rem;
 }
