--- a/src/app/qtc-footer/qtc-footer.component.css
+++ b/src/app/qtc-footer/qtc-footer.component.css
@@ -4,13 +4,16 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    background-color: #fff;
+    z-index: 9999;
 }
 
-.center {
-    margin: auto;
-    width: 15%;
-}
 .p {
-
     font-size:xx-small;
+    padding: 0;
+    margin: 0;
 }
